Fix vertical-name alignment in FF and others

--- a/client/landing/gutenboarding/onboarding-block/acquire-intent/style.scss
+++ b/client/landing/gutenboarding/onboarding-block/acquire-intent/style.scss
@@ -70,6 +70,7 @@ $acquire-intent-transition-algorithm: ease-in-out;
 	border-bottom: 2px solid transparent;
 	position: relative;
 	z-index: 2;
+	vertical-align: middle;
 }
 
 /* hide the placeholder when input is not empty */
